[gd_scene load_steps=15 format=3 uid="uid://cr378mrpqgvkl"]

[ext_resource type="Script" uid="uid://cmd7b2c8lwk1w" path="res://MenuItems/canvas_layer.gd" id="1_1eub4"]
[ext_resource type="Theme" uid="uid://cyppchc1lky3m" path="res://main_theme.tres" id="1_jlkld"]
[ext_resource type="Script" uid="uid://duya31nkcrobb" path="res://MenuItems/items_container.gd" id="2_mlwxn"]
[ext_resource type="Script" uid="uid://deggq43cseisj" path="res://MenuItems/action_container.gd" id="3_2vwo8"]
[ext_resource type="Script" uid="uid://bcjvx3shq3qm4" path="res://MenuItems/build_menu.gd" id="3_qymyi"]
[ext_resource type="Script" uid="uid://csqddoh1yyng0" path="res://MenuItems/building_menu.gd" id="5_u2757"]
[ext_resource type="Texture2D" uid="uid://ceeaxe6vq40r3" path="res://3rd Party/assets/icons/card_outline_remove.png" id="7_fdno1"]
[ext_resource type="Texture2D" uid="uid://ryfs7ig8qyqd" path="res://3rd Party/assets/icons/flask_half.png" id="7_xgd15"]
[ext_resource type="Script" uid="uid://b3qnqkhol0r5l" path="res://MenuItems/display_container.gd" id="8_w0xfj"]
[ext_resource type="Script" uid="uid://cqa0v6segmuoa" path="res://MenuItems/quest_container.gd" id="9_8mdjv"]
[ext_resource type="Texture2D" uid="uid://b4ksndue2pek8" path="res://3rd Party/assets/gui/grey_boxCross.png" id="10_0ulqf"]
[ext_resource type="AudioStream" uid="uid://c573qngroi41v" path="res://assets/wistle.wav" id="10_d70d2"]
[ext_resource type="StyleBox" uid="uid://dnfumb4a801lh" path="res://beightLightTextureForPanel.tres" id="11_g6dwa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rq840"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_1eub4")

[node name="ItemsContainer" type="PanelContainer" parent="."]
offset_left = 10.0
offset_top = 14.0
offset_right = 121.0
offset_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_jlkld")
script = ExtResource("2_mlwxn")

[node name="VBoxContainer" type="HBoxContainer" parent="ItemsContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Tools" type="VBoxContainer" parent="ItemsContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ItemsContainer/VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Tools:"

[node name="Materials" type="VBoxContainer" parent="ItemsContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_jlkld")

[node name="TotalMaterials" type="Label" parent="ItemsContainer/VBoxContainer/Materials"]
visible = false
layout_mode = 2
text = "Materials"

[node name="CounterContainer" type="VBoxContainer" parent="ItemsContainer/VBoxContainer"]
layout_mode = 2

[node name="Quest Counter" type="Label" parent="ItemsContainer/VBoxContainer/CounterContainer"]
layout_mode = 2

[node name="ActionContainer" type="PanelContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -20.0
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_jlkld")
script = ExtResource("3_2vwo8")

[node name="BuildMenu" type="HBoxContainer" parent="ActionContainer"]
layout_mode = 2
script = ExtResource("3_qymyi")

[node name="BuildingMenu" type="HBoxContainer" parent="ActionContainer"]
visible = false
layout_mode = 2
script = ExtResource("5_u2757")

[node name="PanelContainer" type="PanelContainer" parent="ActionContainer/BuildingMenu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ActionContainer/BuildingMenu/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ActionContainer/BuildingMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="WorkContainer" type="VBoxContainer" parent="ActionContainer/BuildingMenu/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ActionContainer/BuildingMenu/PanelContainer/VBoxContainer/HBoxContainer/WorkContainer"]
layout_mode = 2
text = "Start Job"

[node name="WorkButton" type="TextureButton" parent="ActionContainer/BuildingMenu/PanelContainer/VBoxContainer/HBoxContainer/WorkContainer"]
layout_mode = 2
tooltip_text = "Start a job"
stretch_mode = 3

[node name="VSeparator3" type="VSeparator" parent="ActionContainer/BuildingMenu/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="ResearchContainer" type="VBoxContainer" parent="ActionContainer/BuildingMenu/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ActionContainer/BuildingMenu/PanelContainer/VBoxContainer/HBoxContainer/ResearchContainer"]
layout_mode = 2
text = "Research"

[node name="ResearchButton" type="TextureButton" parent="ActionContainer/BuildingMenu/PanelContainer/VBoxContainer/HBoxContainer/ResearchContainer"]
layout_mode = 2
tooltip_text = "Start Research"
texture_normal = ExtResource("7_xgd15")
stretch_mode = 3

[node name="VSeparator4" type="VSeparator" parent="ActionContainer/BuildingMenu/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="ActionContainer/BuildingMenu/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ActionContainer/BuildingMenu/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Delete Building"

[node name="RemoveBuildingButton" type="TextureButton" parent="ActionContainer/BuildingMenu/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Destory building and give back some resources"
texture_normal = ExtResource("7_fdno1")
stretch_mode = 3

[node name="DisplayContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(500, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jlkld")
script = ExtResource("8_w0xfj")

[node name="DisplayStack" type="VBoxContainer" parent="DisplayContainer"]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="DisplayContainer/DisplayStack"]
layout_mode = 2

[node name="DisplayTitleLabel" type="Label" parent="DisplayContainer/DisplayStack/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("1_jlkld")
theme_override_font_sizes/font_size = 20
text = "Welcome to Boom or Bust: Idle Goes West!"

[node name="CloseDisplayButton" type="TextureButton" parent="DisplayContainer/DisplayStack/HeaderContainer"]
unique_name_in_owner = true
z_index = 50
z_as_relative = false
layout_mode = 2
texture_normal = ExtResource("10_0ulqf")

[node name="PanelContainer" type="PanelContainer" parent="DisplayContainer/DisplayStack"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_jlkld")
theme_override_styles/panel = SubResource("StyleBoxTexture_rq840")

[node name="MainDisplayContainer" type="VBoxContainer" parent="DisplayContainer/DisplayStack/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MainDisplayLabel" type="Label" parent="DisplayContainer/DisplayStack/PanelContainer/MainDisplayContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("11_g6dwa")
text = "Use WASD or Arrow keys to move.

Your items and materials are displayed in the top right.

Follow the quests in the bottom right coner.
"

[node name="ButtonContainer" type="HBoxContainer" parent="DisplayContainer/DisplayStack"]
layout_mode = 2

[node name="QuestContainer" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -137.0
offset_top = -65.0
offset_right = -11.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_jlkld")
script = ExtResource("9_8mdjv")

[node name="VBoxContainer" type="VBoxContainer" parent="QuestContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="QuestContainer/VBoxContainer"]
layout_mode = 2
text = "Active Quests"

[node name="HSeparator" type="HSeparator" parent="QuestContainer/VBoxContainer"]
layout_mode = 2

[node name="QuestList" type="VBoxContainer" parent="QuestContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="QuestContainer"]
stream = ExtResource("10_d70d2")

[connection signal="pressed" from="ActionContainer/BuildingMenu/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/RemoveBuildingButton" to="ActionContainer/BuildingMenu" method="_on_remove_building_button_pressed"]
[connection signal="pressed" from="DisplayContainer/DisplayStack/HeaderContainer/CloseDisplayButton" to="DisplayContainer" method="_on_close_display_button_pressed"]
